--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: "3.9"
 services:
   db:
     image: postgres:15
-    container_name: demo_postgres
     restart: always
     environment:
       POSTGRES_USER: demo
@@ -11,22 +10,13 @@ services:
       POSTGRES_DB: demoapp
     ports:
       - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
 
   app:
     build: ./app
-    container_name: demo_app
-    depends_on:
-      - db
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: demo
-      DB_PASSWORD: demo
-      DB_NAME: demoapp
     ports:
       - "3000:3000"
-
-volumes:
-  db_data:
+    environment:
+      DATABASE_URL: "postgres://demo:demo@db:5432/demoapp?sslmode=disable"
+      PORT: 3000
+    depends_on:
+      - db
