--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,11 +45,11 @@ jobs:
           terraform_version: 1.8.0
 
       - name: Terraform Init
-        working-directory: ./infra/terraform
+        working-directory: ./infra
         run: terraform init
 
       - name: Terraform Apply
-        working-directory: ./infra/terraform
+        working-directory: ./infra
         run: terraform apply -auto-approve
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
